# goblet

./: .bazelrc  .envrc  .golangci.yaml  MODULE.bazel  go.mod
bzl/: external.BUILD.bazel
cmd/goblet/: BUILD.bazel  config.go  fs.go  main.go  screen.go  timer.go
dev/: BUILD.bazel
internal/sdl/: BUILD.bazel  enums.go  events.go  sdl.go
